fix: resolution tablet navbar

--- a/src/app/commons/navbar/navbar.component.css
+++ b/src/app/commons/navbar/navbar.component.css
@@ -102,7 +102,7 @@
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 850px) {
   .header {
     padding: 10px 5%;
     justify-content: space-between;
